Replaced dominant-baseline with dy to fix alignment issues on IE

--- a/src/assets/styles/axis.less
+++ b/src/assets/styles/axis.less
@@ -41,6 +41,7 @@
     font-weight: @font-weight-base;
     line-height: @line-height-base;
     fill: @font-colour;
+    dominant-baseline: no-change;
   }
   .tick path {
     stroke: @gridline-colour;
