--- a/src/assets/styles/legend.less
+++ b/src/assets/styles/legend.less
@@ -15,6 +15,10 @@
     height: 20px;
     justify-content: center;
 
+    .cell{
+      dominant-baseline: no-change;
+    }
+
     .label {
       fill: @legend-label-font-colour;
     }
