--- a/src/assets/styles/navigator.less
+++ b/src/assets/styles/navigator.less
@@ -56,6 +56,7 @@
     text {
       font-size: @font-size-base;
       fill: @font-colour;
+      dominant-baseline: no-change;
     }
 
     #brush-mask {
